# ERP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
erp/: settings.py  urls.py
scripts/: entrypoint.sh
users/: admin.py  config.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_created_at_profile_updated_at_and_more.py
