[tool.poetry]
name = "erp"
version = "0.1.0"
description = ""
authors = ["umairio <umairmateen55@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework-simplejwt = "^5.5.0"
django = "^5.2.1"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
